- Improved the Apache graph adding more statistical values and graphs.
	(suggested by Marco Reale, mlist AT libero.it)
- Added Varnish 4 compatibility (partial). [#98]
- Added support of Basic Authentication to Wowza graph. [#100]
- Added alert capabilities to Apache graph based on the remaining free slots.
	(suggested by Marco Reale, mlist AT libero.it)
- Fixed the text color in the bottom URL of the Bind graph.
- Fixed the text color in the bottom URL of the Icecast Streaming Server graph.
- Fixed a problem with multiple 'ApplicationInstance' tags in Wowza Server
  graph. [#88]
- Fixed the text color in the bottom URL of the Wowza graph.
- Fixed to avoid results garbled when a defined Application is shutdown or if
  multiple servers are defined in the Wowza graph. [#89]
- Fixed a pair of incorrectly defined values in the 'system' graph that affected
  the new RRDtool 1.5 branch with the message "Function update_pdp_prep, case
  DST_GAUGE - Cannot convert '' to float". [#91]
- Fixed a parsing error when using process names with the character colon.
	(thanks to Harold Pena, haroldpena AT hotmail.com for pointing this out)
- Fixed to put the output of the 'addendum_script' at the bottom of the email,
  and to avoid being repeated on each graph in the 'emailreports' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz)
- Fixed a wrong example in the documentation when showing how to define the same
  port number using IPv4 and IPv6 in the 'port' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz for pointing this out)
- Fixed to not show the red background color in listening network ports using
  IPv6 in the 'port' graph.
	(thanks to Dirk Tanneberger, os AT tanneberger.biz for pointing this out)
- Fixed to avoid checking 'iptables' version on BSD systems.
- Fixed to use 'swapctl' instead of 'swapinfo' in OpenBSD.
- Fixed to show the correct uptime in additional Wowza servers.
- Fixed to remove the authentication information from the URLs shown in the